feat: added JWT authentication to all protected resources
